# MC2MT

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/Modules/: FindSQLite3.cmake
src/: MCMap.cpp  MCMap.hpp  MTMap.cpp  conversions.h  convert.hpp
src/cpfs/: CMakeLists.txt  LICENSE.txt  README.md  cpfs.cpp  cpfs.hpp  ls.cpp
src/nbt/: CMakeLists.txt  compression.cpp  compression.hpp  endian.hpp  nbt.cpp  nbt.hpp  serialization.cpp  serialization.hpp  test.cpp
